--- a/achiever.css
+++ b/achiever.css
@@ -4,22 +4,13 @@ body {
 	background-size: cover;
     text-shadow: 4px 4px 4px magenta;
 }
-h1 {
+h1, h2 {
     text-align: center;
 }
-nav {
-    text-align: center;
-    font-size: large;
-    text-shadow: 4px 4px 4px rgb(223, 114, 233);
-    background-color: rgba(248, 64, 233, 0.26);
+
+#all{
+    background-color: rgba(243, 211, 241, 0.466);
     border-radius: 10px;
-    margin-left: 45%;
-    margin-right: 45%;
-}
-
-
-h2 {
-    text-align: center;
 }
 
 p{
@@ -32,6 +23,25 @@ p{
     
 }
 
+nav {
+    text-align: center;
+    font-size: large;
+    border-radius: 10px;
+    margin-left: 45%;
+    margin-right: 45%;
+}
+
+a:link{
+    color: rgb(3, 1, 3);
+    text-shadow: 4px 4px 4px magenta;
+    
+
+}
+a:visited{
+    color:rgb(5, 1, 4);
+    text-shadow: 4px 4px 4px magenta;
+
+}
 a:link{
     color: rgb(3, 1, 3);
     text-shadow: 4px 4px 4px rgb(223, 114, 233);
