--- a/analytical.css
+++ b/analytical.css
@@ -2,22 +2,31 @@ body {
 	background-image: url("css images/bg15.jpg"); font-family: Georgia;
 	background-repeat: no-repeat;
 	background-size: cover;
-    text-shadow: 2px 2px 2px rgba(230, 10, 211, 0.678);
+    text-shadow: 4px 4px 4px rgb(199, 81, 253);
 }
-h1 {
+h1, h2, p {
     text-align: center;
 }
 nav {
     text-align: center;
     font-size: larger;
-    text-shadow: 4px 4px 4px rgb(219, 9, 114);
+    
 }
-h2 {
-    text-align: center;
+#all {
+    background-color: rgba(240, 248, 255, 0.479);
+    border-radius: 10px;
 }
 
-p{
+a:link{
+    color: rgb(3, 1, 3);
+    text-shadow: 4px 2px 2px rgb(199, 81, 253);
+    font-size: large;
+    
 
+}
+a:visited{
+    color:rgb(5, 1, 4);
+    text-shadow: 4px 2px 2px rgb(199, 81, 253);
+    font-size: large;
 
-    text-align: center;
 }
