--- a/belief.css
+++ b/belief.css
@@ -2,10 +2,10 @@ body {
 	background-image: url("css images/2cp.jpg"); font-family: Georgia;
 	background-repeat: no-repeat;
 	background-size: cover;
-    text-shadow: 4px 4px 4px rgb(162, 0, 255);
+    text-shadow: 4px 4px 4px rgb(128, 3, 201);
     color:rgb(43, 220, 226);
 }
-h1 {
+h1, h2 {
     text-align: center;
 }
 nav {
@@ -17,12 +17,9 @@ nav {
     margin-left: 45%;
     margin-right: 45%;
 }
-h3{
-    background-color: rgba(2, 3, 3, 0.5);
-}
-
-h2 {
-    text-align: center;
+#all{
+    background-color: rgba(12, 15, 15, 0.411);
+    border-radius: 10px;
 }
 
 p{
@@ -36,8 +33,8 @@ p{
 }
 
 a:link{
-    color: rgb(3, 1, 3);
-    text-shadow: 4px 4px 4px rgb(223, 114, 233);
+    color: rgb(9, 13, 14);
+    text-shadow: 4px 4px 4px rgb(223, 70, 236);
     
 
 }
