--- a/deliberative.css
+++ b/deliberative.css
@@ -5,29 +5,26 @@ body {
     text-shadow: 4px 4px 4px rgb(162, 0, 255);
     color:rgb(43, 220, 226);
 }
-h1 {
+h1, h2 {
     text-align: center;
 }
 nav {
     text-align: center;
     font-size: large;
     text-shadow: 4px 4px 4px rgb(223, 114, 233);
-    background-color: rgba(211, 64, 248, 0.575);
+   background-color: rgba(172, 40, 248, 0.733);
     border-radius: 10px;
     margin-left: 45%;
     margin-right: 45%;
 }
-h3{
-    background-color: rgba(2, 3, 3, 0.356);
-}
-
-h2 {
-    text-align: center;
+#all{
+    background-color: rgba(2, 3, 3, 0.432);
+    border-radius: 10px;
 }
 
 p{
     text-align: center;
-    background-color: rgba(211, 64, 248, 0.39);
+    background-color: rgba(167, 38, 241, 0.733);
     border-radius: 10px;
     margin-left: 35%;
     margin-right: 35%;
@@ -37,7 +34,7 @@ p{
 
 a:link{
     color: rgb(3, 1, 3);
-    text-shadow: 4px 4px 4px rgb(223, 114, 233);
+    text-shadow: 4px 4px 4px rgb(169, 63, 240);
     
 
 }
