--- a/developer.css
+++ b/developer.css
@@ -5,29 +5,26 @@ body {
     text-shadow: 4px 4px 4px rgb(162, 0, 255);
     color:rgb(29, 210, 216);
 }
-h1 {
+h1, h2 {
     text-align: center;
 }
 nav {
     text-align: center;
     font-size: large;
-    text-shadow: 4px 4px 4px rgb(223, 114, 233);
-    background-color: rgba(196, 37, 236, 0.575);
+    text-shadow: 4px 4px 4px rgb(163, 24, 243);
+    background-color:rgba(0, 255, 255, 0.753);
     border-radius: 10px;
     margin-left: 45%;
     margin-right: 45%;
 }
-h3{
-    background-color: rgba(2, 3, 3, 0.24);
-}
-
-h2 {
-    text-align: center;
+#all{
+    background-color: rgba(14, 19, 19, 0.24);
+    border-radius: 10px;
 }
 
 p{
     text-align: center;
-    background-color: rgba(211, 64, 248, 0.39);
+    background-color:rgba(0, 255, 255, 0.753);
     border-radius: 10px;
     margin-left: 35%;
     margin-right: 35%;
@@ -37,12 +34,12 @@ p{
 
 a:link{
     color: rgb(3, 1, 3);
-    text-shadow: 4px 4px 4px rgb(223, 114, 233);
+    text-shadow: 4px 4px 4px rgb(186, 56, 247);
     
 
 }
 a:visited{
     color:rgb(5, 1, 4);
-    text-shadow: 4px 4px 4px rgb(223, 114, 233);
+    text-shadow: 4px 4px 4px rgb(196, 63, 248);
 
 }
