--- a/empathy.css
+++ b/empathy.css
@@ -2,32 +2,30 @@ body {
 	background-image: url("css images/hbb.jpg"); font-family: Georgia;
 	background-repeat: no-repeat;
 	background-size: cover;
-    text-shadow: 4px 4px 4px rgb(162, 0, 255);
-    color:rgb(43, 220, 226);
+    text-shadow: 4px 4px 4px rgb(100, 16, 235);
+    color:rgb(28, 246, 253);
+    text-align: center;
 }
-h1 {
+h1, h2 {
     text-align: center;
 }
 nav {
     text-align: center;
     font-size: large;
     text-shadow: 4px 4px 4px rgb(223, 114, 233);
-    background-color: rgba(211, 64, 248, 0.26);
+    background-color: rgba(28, 245, 253, 0.712);
     border-radius: 10px;
     margin-left: 45%;
     margin-right: 45%;
 }
-h3{
-    background-color: rgba(2, 3, 3, 0.301);
-}
-
-h2 {
-    text-align: center;
+#all{
+    background-color: rgba(2, 3, 3, 0.315);
+    border-radius: 10px;
 }
 
 p{
     text-align: center;
-    background-color: rgba(211, 64, 248, 0.39);
+    background-color: rgba(28, 245, 253, 0.836);
     border-radius: 10px;
     margin-left: 35%;
     margin-right: 35%;
@@ -37,7 +35,7 @@ p{
 
 a:link{
     color: rgb(3, 1, 3);
-    text-shadow: 4px 4px 4px rgb(223, 114, 233);
+    text-shadow: 4px 4px 4px rgb(119, 6, 172);
     
 
 }
