--- a/input.css
+++ b/input.css
@@ -3,44 +3,36 @@ body {
     font-family: Georgia;
 	background-repeat: no-repeat;
 	background-size: cover;
-    text-shadow: 2px 2px 2px magenta;
+    text-shadow: 2px 2px 2px rgb(224, 14, 224);
     background-color: rgba(240, 248, 255, 0.452);
 }
-h1 {
+h1, h2 {
     text-align: center;
-    text-shadow: 4px 4px 4px magenta;
-    
+   
     
 }
 nav {
     color:aqua; text-align: center;
         font-size: larger;
         font-weight: 500;
-    text-shadow: 4px 4px 4px rgb(219, 9, 114);
-    background-color: rgba(240, 248, 255, 0.808);
+    background-color: rgba(240, 248, 255, 0.671);
     border-radius: 10px;
     margin-left: 45%;
     margin-right: 45%;
 }
 
-h2 {
-    text-align: center;
-    text-shadow: 4px 4px 4px magenta;
-    
-}
-h3{
+#all{
     background-color: rgba(240, 248, 255, 0.39);
+    border-radius: 10px;
     
 }
 a:visited{
     color:rgb(3, 2, 5);
-    text-shadow: 4px 4px 4px magenta;
     font-weight: 600;
 }
 
 a:link{
         color: rgb(3, 1, 3);
-        text-shadow: 4px 4px 4px magenta;
         font-weight: 600;
         
 }
@@ -48,8 +40,7 @@ p{
     color:rgb(3, 5, 5); text-align: center;
         font-size: large;
         font-weight: 500;
-    text-shadow: 4px 4px 4px rgb(219, 9, 114);
-    background-color: rgba(240, 248, 255, 0.808);
+    background-color: rgba(240, 248, 255, 0.637);
     border-radius: 10px;
     margin-left: 35%;
     margin-right: 35%;
