--- a/responsibility.css
+++ b/responsibility.css
@@ -2,32 +2,29 @@ body {
 	background-image: url("css images/test.jpg"); font-family: Georgia;
 	background-repeat: no-repeat;
 	background-size: cover;
-    text-shadow: 4px 4px 4px rgb(162, 0, 255);
+    text-shadow: 4px 4px 4px rgb(119, 0, 255);
     color:rgb(43, 220, 226);
 }
-h1 {
+h1, h2 {
     text-align: center;
 }
 nav {
     text-align: center;
     font-size: large;
     text-shadow: 4px 4px 4px rgb(223, 114, 233);
-    background-color: rgba(211, 64, 248, 0.685);
+    background-color: rgba(64, 242, 248, 0.582);
     border-radius: 10px;
     margin-left: 45%;
     margin-right: 45%;
 }
-h3{
-    background-color: rgba(2, 3, 3, 0.219);
-}
-
-h2 {
-    text-align: center;
+#all{
+    background-color: rgba(2, 3, 3, 0.384);
+    border-radius: 10px;
 }
 
 p{
     text-align: center;
-    background-color: rgba(211, 64, 248, 0.637);
+    background-color: rgba(64, 248, 239, 0.527);
     border-radius: 10px;
     margin-left: 35%;
     margin-right: 35%;
@@ -37,12 +34,12 @@ p{
 
 a:link{
     color: rgb(3, 1, 3);
-    text-shadow: 4px 4px 4px rgb(223, 114, 233);
+    text-shadow: 4px 4px 4px rgb(152, 39, 245);
     
 
 }
 a:visited{
     color:rgb(5, 1, 4);
-    text-shadow: 4px 4px 4px rgb(223, 114, 233);
+    text-shadow: 4px 4px 4px rgb(166, 67, 247);
 
 }
